...
                                controller.goToEmailEntry(isSignUp: false);
                              },
                              style: TextButton.styleFrom(
                                foregroundColor: theme.colors.foreground,
                              ),
                              child: Text(
                                'Log in',
                                style: theme.typography.base,
                              ),
                            ),
                          ),
                      ],
                    ),
...
