...
            leading: Icon(
              Icons.swap_horiz_rounded,
              color: theme.colors.foreground,
              size: 20,
            ),
            title: Text(
              'Switch workspace',
              style: theme.typography.base.copyWith(
                color: theme.colors.foreground,
              ),
            ),
            trailing: Icon(
              Icons.chevron_right_rounded,
...
