...
                  ),

                  SizedBox(height: theme.spacing.xl),

                  // Heading
                  Text(
                    'Reset password',
                    style: theme.typography.lg.copyWith(
                      color: theme.colors.foreground,
                      fontWeight: FontWeight.bold,
                    ),
                  ),

...
