...
    this.theme,
    this.authFlowConfig = const AuthFlowConfig(),
    this.onboardingConfig,
    this.chatExperienceConfig = const ChatExperienceConfig(),
    this.sidebarConfig,
    this.settingsConfig = const SettingsConfig(),
    this.appTitle = 'FlAI Chat',
    this.showSplash = true,
  });
}

